Added date to README

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 Mark Young 3082685
 CSCI 4211 
+Summer 2008
 
 TFTP-UDP-STOPNWAIT - is a stop and wait file transfer application that 
 runs on top of TCP and creates its own headers to maintain flags,
